--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 # create and drop tables and sequences
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+# H2
+spring.h2.console.enabled=true
 
 # Database settings
-spring.datasource.url=jdbc:oracle:thin:@localhost:1522:orcl
-spring.datasource.username=HIBERNATE_TEST
-spring.datasource.password=HIBERNATE_TEST
-spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver.class=org.h2.Driver
 
 # logging
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
