basic authentication interface through facebook and google

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,34 @@ spring.datasource.driver.class=org.h2.Driver
 # logging
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=debug
+
+
+spring.main.allow-bean-definition-overriding=true
+
+#security
+facebook.live.client.clientId=939028069640146
+facebook.live.client.clientSecret=916a76947f912df2f50eb7a091faa750
+facebook.live.client.accessTokenUri=https://graph.facebook.com/oauth/access_token
+facebook.live.client.userAuthorizationUri=https://www.facebook.com/dialog/oauth
+facebook.live.client.tokenName=oauth_token
+facebook.live.client.authenticationScheme=query
+facebook.live.client.clientAuthenticationScheme=form
+facebook.live.resource.userInfoUri=https://graph.facebook.com/me
+
+facebook.client.clientId=746250045748376
+facebook.client.clientSecret=4f9c8a5a4c77c738b540e723d47409f6
+facebook.client.accessTokenUri=https://graph.facebook.com/oauth/access_token
+facebook.client.userAuthorizationUri=https://www.facebook.com/dialog/oauth
+facebook.client.tokenName=oauth_token
+facebook.client.authenticationScheme=query
+facebook.client.clientAuthenticationScheme=form
+facebook.resource.userInfoUri=https://graph.facebook.com/me
+
+google.client.client-id=840063194284-a34pqs2jac1l13184jrnel1ls5pbjcep.apps.googleusercontent.com
+google.client.client-secret=jlYMUrJgZCTZI5WRIPMXDzmK
+google.client.access-token-uri=https://www.googleapis.com/oauth2/v3/token
+google.client.user-authorization-uri=https://accounts.google.com/o/oauth2/auth
+google.client.client-authentication-scheme=form
+google.client.scope=profile,email,openid
+google.resource.user-info-uri=https://www.googleapis.com/userinfo/v2/me
+google.resource.prefer-token-info=false
